# constellation-engine

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
constellation_engine/cli/: main.py
constellation_engine/core/: graph.py  types.py  validate.py
constellation_engine/io/: loaders.py  schema.py
constellation_engine/sim/: criticality.py  models.py  propagate.py
docs/examples/: enterprise.yaml  simple.yaml
tests/: test_criticality.py  test_failure_propagation.py  test_graph_build.py  test_manifest_loader.py
